[project]
name = "bpe-mimic3"
version = "0.1.0"
description = "Blood pressure estimation from PPG using MIMIC-III and PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "wfdb>=4.1",
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "torch>=2.5",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bpe"]
